@@ -159,3 +159,14 @@ format_kg (char *out, unsigned int outlen, const void *k_g)
 
   return (out);
 }
+
+unsigned int
+get_timestamp_flags (struct common_cmd_args *common_args, unsigned int defaultflags)
+{
+  unsigned int timestamp_flags = defaultflags;
+
+  if (common_args->utc_to_localtime)
+    timestamp_flags |= IPMI_TIMESTAMP_FLAG_UTC_TO_LOCALTIME;
+
+  return (timestamp_flags);
+} 
