@@ -1804,7 +1804,8 @@ _output_power_statistics (ipmi_dcmi_state_data_t *state_data,
   memset (timestr, '\0', IPMI_DCMI_TIME_BUFLEN + 1);
 
   if (ipmi_timestamp_string (time_stamp,
-			     IPMI_TIMESTAMP_FLAG_DEFAULT,
+			     get_timestamp_flags (&(state_data->prog_data->args->common_args),
+						  IPMI_TIMESTAMP_FLAG_DEFAULT), 
 			     "%m/%d/%Y - %H:%M:%S",
 			     timestr,
 			     IPMI_DCMI_TIME_BUFLEN) < 0)
