@@ -80,6 +80,7 @@ static struct argp_option cmdline_options[] =
     ARGP_COMMON_SDR_CACHE_OPTIONS,
     ARGP_COMMON_SDR_CACHE_OPTIONS_FILE_DIRECTORY,
     ARGP_COMMON_SDR_CACHE_OPTIONS_IGNORE,
+    ARGP_COMMON_TIMESTAMP_OPTIONS,
     ARGP_COMMON_HOSTRANGED_OPTIONS,
     ARGP_COMMON_OPTIONS_DEBUG,
     { "device-id", DEVICE_ID_KEY, "DEVICE_ID", 0,
