@@ -50,6 +50,7 @@
 #include "ipmi-oem-fujitsu.h"
 
 #include "tool-oem-common.h"
+#include "tool-util-common.h"
 
 #include "freeipmi-portability.h"
 #include "pstdout.h"
@@ -1427,7 +1428,8 @@ ipmi_oem_fujitsu_get_sel_entry_long_text (ipmi_oem_state_data_t *state_data)
   memset (time_buf, '\0', IPMI_OEM_TIME_BUFLEN + 1);
   
   if (ipmi_timestamp_string (timestamp,
-			     IPMI_TIMESTAMP_FLAG_DEFAULT,
+			     get_timestamp_flags (&(state_data->prog_data->args->common_args),
+						  IPMI_TIMESTAMP_FLAG_DEFAULT), 
 			     "%b-%d-%Y | %H:%M:%S",
 			     time_buf,
 			     IPMI_OEM_TIME_BUFLEN) < 0)
