@@ -48,6 +48,7 @@
 #include "ipmi-oem-common.h"
 #include "ipmi-oem-wistron.h"
 #include "ipmi-oem-thirdparty.h"
+#include "tool-util-common.h"
 
 #include "freeipmi-portability.h"
 #include "pstdout.h"
@@ -2289,7 +2290,8 @@ ipmi_oem_wistron_get_chassis_power_readings (ipmi_oem_state_data_t *state_data)
   memset (time_buf, '\0', IPMI_OEM_TIME_BUFLEN + 1);
   
   if (ipmi_timestamp_string (ipmitimestamp,
-			     IPMI_TIMESTAMP_FLAG_DEFAULT,
+			     get_timestamp_flags (&(state_data->prog_data->args->common_args),
+						  IPMI_TIMESTAMP_FLAG_DEFAULT), 
 			     "%b-%d-%Y | %H:%M:%S",
 			     time_buf,
 			     IPMI_OEM_TIME_BUFLEN) < 0)
