@@ -80,6 +80,7 @@ static struct argp_option cmdline_options[] =
     ARGP_COMMON_SDR_CACHE_OPTIONS,
     ARGP_COMMON_SDR_CACHE_OPTIONS_FILE_DIRECTORY,
     ARGP_COMMON_SDR_CACHE_OPTIONS_IGNORE,
+    ARGP_COMMON_TIMESTAMP_OPTIONS,
     ARGP_COMMON_HOSTRANGED_OPTIONS,
     ARGP_COMMON_OPTIONS_DEBUG,
     { "verbose",    VERBOSE_KEY,    0, 0,
