@@ -152,7 +152,8 @@ _display_sel_info (ipmi_sel_state_data_t *state_data)
   memset (timestr, '\0', IPMI_SEL_TIME_BUFLEN + 1);
   
   if (ipmi_timestamp_string ((uint32_t)val,
-			     IPMI_TIMESTAMP_FLAG_DEFAULT,
+			     get_timestamp_flags (&(state_data->prog_data->args->common_args),
+						  IPMI_TIMESTAMP_FLAG_DEFAULT), 
 			     "%m/%d/%Y - %H:%M:%S",
 			     timestr,
 			     IPMI_SEL_TIME_BUFLEN) < 0)
@@ -180,7 +181,8 @@ _display_sel_info (ipmi_sel_state_data_t *state_data)
   memset (timestr, '\0', IPMI_SEL_TIME_BUFLEN + 1);
   
   if (ipmi_timestamp_string ((uint32_t)val,
-			     IPMI_TIMESTAMP_FLAG_DEFAULT,
+			     get_timestamp_flags (&(state_data->prog_data->args->common_args),
+						  IPMI_TIMESTAMP_FLAG_DEFAULT), 
 			     "%m/%d/%Y - %H:%M:%S",
 			     timestr,
 			     IPMI_SEL_TIME_BUFLEN) < 0)
