@@ -157,7 +157,8 @@ _sdr_repository_info (ipmi_sensors_state_data_t *state_data)
   memset (timestr, '\0', IPMI_SENSORS_TIME_BUFLEN + 1);
   
   if (ipmi_timestamp_string ((uint32_t)val,
-			     IPMI_TIMESTAMP_FLAG_DEFAULT,
+			     get_timestamp_flags (&(state_data->prog_data->args->common_args),
+						  IPMI_TIMESTAMP_FLAG_DEFAULT), 
 			     "%m/%d/%Y - %H:%M:%S",
 			     timestr,
 			     IPMI_SENSORS_TIME_BUFLEN) < 0)
@@ -185,7 +186,8 @@ _sdr_repository_info (ipmi_sensors_state_data_t *state_data)
   memset (timestr, '\0', IPMI_SENSORS_TIME_BUFLEN + 1);
   
   if (ipmi_timestamp_string ((uint32_t)val,
-			     IPMI_TIMESTAMP_FLAG_DEFAULT,
+			     get_timestamp_flags (&(state_data->prog_data->args->common_args),
+						  IPMI_TIMESTAMP_FLAG_DEFAULT), 
 			     "%m/%d/%Y - %H:%M:%S",
 			     timestr,
 			     IPMI_SENSORS_TIME_BUFLEN) < 0)
